// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Formik correctly validate form submission 1`] = `
<WithFormik(RefilBalanceForm)
  provider={
    Object {
      "id": 1,
      "name": "MTS",
    }
  }
>
  <Formik
    enableReinitialize={false}
    handleSubmit={[Function]}
    initialValues={
      Object {
        "amount": "",
        "phone": "",
      }
    }
    isInitialValid={false}
    onSubmit={[Function]}
    provider={
      Object {
        "id": 1,
        "name": "MTS",
      }
    }
    render={[Function]}
    validate={[Function]}
    validateOnBlur={true}
    validateOnChange={true}
  >
    <RefilBalanceForm
      dirty={false}
      errors={Object {}}
      handleBlur={[Function]}
      handleChange={[Function]}
      handleReset={[Function]}
      handleSubmit={[Function]}
      initialValues={
        Object {
          "amount": "",
          "phone": "",
        }
      }
      isSubmitting={false}
      isValid={false}
      isValidating={false}
      provider={
        Object {
          "id": 1,
          "name": "MTS",
        }
      }
      registerField={[Function]}
      resetForm={[Function]}
      setError={[Function]}
      setErrors={[Function]}
      setFieldError={[Function]}
      setFieldTouched={[Function]}
      setFieldValue={[Function]}
      setFormikState={[Function]}
      setStatus={[Function]}
      setSubmitting={[Function]}
      setTouched={[Function]}
      setValues={[Function]}
      submitCount={0}
      submitForm={[Function]}
      touched={Object {}}
      unregisterField={[Function]}
      validateField={[Function]}
      validateForm={[Function]}
      validateOnBlur={true}
      validateOnChange={true}
      values={
        Object {
          "amount": "",
          "phone": "",
        }
      }
    >
      <div>
        <styles__Header>
          <h1
            className="styles__Header-sc-1pz6ecu-1 YZJuF"
          >
            Refil balance 
            MTS
          </h1>
        </styles__Header>
        <styles__Form
          onSubmit={[Function]}
        >
          <form
            className="styles__Form-sc-1pz6ecu-0 euvddx"
            onSubmit={[Function]}
          >
            <Input
              guide={false}
              innerRef={[Function]}
              label="Phone number"
              mask={
                Array [
                  "+",
                  "7",
                  " ",
                  "(",
                  /\\[1-9\\]/,
                  /\\\\d/,
                  /\\\\d/,
                  ")",
                  " ",
                  /\\\\d/,
                  /\\\\d/,
                  /\\\\d/,
                  "-",
                  /\\\\d/,
                  /\\\\d/,
                  "-",
                  /\\\\d/,
                  /\\\\d/,
                ]
              }
              name="phone"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder="+7 (978) 802-10-42"
              type="tel"
              value=""
            >
              <C
                name="phone"
                render={[Function]}
              >
                <FieldInner
                  formik={
                    Object {
                      "dirty": false,
                      "errors": Object {},
                      "handleBlur": [Function],
                      "handleChange": [Function],
                      "handleReset": [Function],
                      "handleSubmit": [Function],
                      "initialValues": Object {
                        "amount": "",
                        "phone": "",
                      },
                      "isSubmitting": false,
                      "isValid": false,
                      "isValidating": false,
                      "registerField": [Function],
                      "resetForm": [Function],
                      "setError": [Function],
                      "setErrors": [Function],
                      "setFieldError": [Function],
                      "setFieldTouched": [Function],
                      "setFieldValue": [Function],
                      "setFormikState": [Function],
                      "setStatus": [Function],
                      "setSubmitting": [Function],
                      "setTouched": [Function],
                      "setValues": [Function],
                      "submitCount": 0,
                      "submitForm": [Function],
                      "touched": Object {},
                      "unregisterField": [Function],
                      "validate": [Function],
                      "validateField": [Function],
                      "validateForm": [Function],
                      "validateOnBlur": true,
                      "validateOnChange": true,
                      "validationSchema": undefined,
                      "values": Object {
                        "amount": "",
                        "phone": "",
                      },
                    }
                  }
                  name="phone"
                  render={[Function]}
                >
                  <styles__StyledContainer>
                    <div
                      className="styles__StyledContainer-sc-12xhm0c-0 gllhCp"
                    >
                      <styles__StyledLabel
                        htmlFor="phone"
                      >
                        <label
                          className="styles__StyledLabel-sc-12xhm0c-2 dnUmdd"
                          htmlFor="phone"
                        >
                          Phone number
                        </label>
                      </styles__StyledLabel>
                      <t
                        guide={false}
                        mask={
                          Array [
                            "+",
                            "7",
                            " ",
                            "(",
                            /\\[1-9\\]/,
                            /\\\\d/,
                            /\\\\d/,
                            ")",
                            " ",
                            /\\\\d/,
                            /\\\\d/,
                            /\\\\d/,
                            "-",
                            /\\\\d/,
                            /\\\\d/,
                            "-",
                            /\\\\d/,
                            /\\\\d/,
                          ]
                        }
                        name="phone"
                        onBlur={[Function]}
                        onChange={[Function]}
                        placeholder="+7 (978) 802-10-42"
                        render={[Function]}
                        type="tel"
                        value=""
                      >
                        <styles__StyledInput
                          defaultValue=""
                          innerRef={[Function]}
                          name="phone"
                          onBlur={[Function]}
                          onChange={[Function]}
                          placeholder="+7 (978) 802-10-42"
                          type="tel"
                        >
                          <input
                            className="styles__StyledInput-sc-12xhm0c-1 ksPcYq"
                            defaultValue=""
                            name="phone"
                            onBlur={[Function]}
                            onChange={[Function]}
                            placeholder="+7 (978) 802-10-42"
                            type="tel"
                          />
                        </styles__StyledInput>
                      </t>
                    </div>
                  </styles__StyledContainer>
                </FieldInner>
              </C>
            </Input>
            <Input
              innerRef={[Function]}
              label="Amount"
              mask={[Function]}
              name="amount"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            >
              <C
                name="amount"
                render={[Function]}
              >
                <FieldInner
                  formik={
                    Object {
                      "dirty": false,
                      "errors": Object {},
                      "handleBlur": [Function],
                      "handleChange": [Function],
                      "handleReset": [Function],
                      "handleSubmit": [Function],
                      "initialValues": Object {
                        "amount": "",
                        "phone": "",
                      },
                      "isSubmitting": false,
                      "isValid": false,
                      "isValidating": false,
                      "registerField": [Function],
                      "resetForm": [Function],
                      "setError": [Function],
                      "setErrors": [Function],
                      "setFieldError": [Function],
                      "setFieldTouched": [Function],
                      "setFieldValue": [Function],
                      "setFormikState": [Function],
                      "setStatus": [Function],
                      "setSubmitting": [Function],
                      "setTouched": [Function],
                      "setValues": [Function],
                      "submitCount": 0,
                      "submitForm": [Function],
                      "touched": Object {},
                      "unregisterField": [Function],
                      "validate": [Function],
                      "validateField": [Function],
                      "validateForm": [Function],
                      "validateOnBlur": true,
                      "validateOnChange": true,
                      "validationSchema": undefined,
                      "values": Object {
                        "amount": "",
                        "phone": "",
                      },
                    }
                  }
                  name="amount"
                  render={[Function]}
                >
                  <styles__StyledContainer>
                    <div
                      className="styles__StyledContainer-sc-12xhm0c-0 gllhCp"
                    >
                      <styles__StyledLabel
                        htmlFor="amount"
                      >
                        <label
                          className="styles__StyledLabel-sc-12xhm0c-2 dnUmdd"
                          htmlFor="amount"
                        >
                          Amount
                        </label>
                      </styles__StyledLabel>
                      <t
                        mask={[Function]}
                        name="amount"
                        onBlur={[Function]}
                        onChange={[Function]}
                        render={[Function]}
                        value=""
                      >
                        <styles__StyledInput
                          defaultValue=""
                          innerRef={[Function]}
                          name="amount"
                          onBlur={[Function]}
                          onChange={[Function]}
                        >
                          <input
                            className="styles__StyledInput-sc-12xhm0c-1 ksPcYq"
                            defaultValue=""
                            name="amount"
                            onBlur={[Function]}
                            onChange={[Function]}
                          />
                        </styles__StyledInput>
                      </t>
                    </div>
                  </styles__StyledContainer>
                </FieldInner>
              </C>
            </Input>
            <styles__Button
              disabled={false}
              type="submit"
            >
              <button
                className="styles__Button-sc-1pz6ecu-2 bMKNpz"
                disabled={false}
                type="submit"
              >
                Submit
              </button>
            </styles__Button>
          </form>
        </styles__Form>
      </div>
    </RefilBalanceForm>
  </Formik>
</WithFormik(RefilBalanceForm)>
`;

exports[`Formik correctly validate form submission 2`] = `
<WithFormik(RefilBalanceForm)
  provider={
    Object {
      "id": 1,
      "name": "MTS",
    }
  }
>
  <Formik
    enableReinitialize={false}
    handleSubmit={[Function]}
    initialValues={
      Object {
        "amount": "",
        "phone": "",
      }
    }
    isInitialValid={false}
    onSubmit={[Function]}
    provider={
      Object {
        "id": 1,
        "name": "MTS",
      }
    }
    render={[Function]}
    validate={[Function]}
    validateOnBlur={true}
    validateOnChange={true}
  >
    <RefilBalanceForm
      dirty={false}
      errors={Object {}}
      handleBlur={[Function]}
      handleChange={[Function]}
      handleReset={[Function]}
      handleSubmit={[Function]}
      initialValues={
        Object {
          "amount": "",
          "phone": "",
        }
      }
      isSubmitting={true}
      isValid={false}
      isValidating={true}
      provider={
        Object {
          "id": 1,
          "name": "MTS",
        }
      }
      registerField={[Function]}
      resetForm={[Function]}
      setError={[Function]}
      setErrors={[Function]}
      setFieldError={[Function]}
      setFieldTouched={[Function]}
      setFieldValue={[Function]}
      setFormikState={[Function]}
      setStatus={[Function]}
      setSubmitting={[Function]}
      setTouched={[Function]}
      setValues={[Function]}
      submitCount={1}
      submitForm={[Function]}
      touched={
        Object {
          "amount": true,
          "phone": true,
        }
      }
      unregisterField={[Function]}
      validateField={[Function]}
      validateForm={[Function]}
      validateOnBlur={true}
      validateOnChange={true}
      values={
        Object {
          "amount": "",
          "phone": "",
        }
      }
    >
      <div>
        <styles__Header>
          <h1
            className="styles__Header-sc-1pz6ecu-1 YZJuF"
          >
            Refil balance 
            MTS
          </h1>
        </styles__Header>
        <styles__Form
          onSubmit={[Function]}
        >
          <form
            className="styles__Form-sc-1pz6ecu-0 euvddx"
            onSubmit={[Function]}
          >
            <Input
              guide={false}
              innerRef={[Function]}
              label="Phone number"
              mask={
                Array [
                  "+",
                  "7",
                  " ",
                  "(",
                  /\\[1-9\\]/,
                  /\\\\d/,
                  /\\\\d/,
                  ")",
                  " ",
                  /\\\\d/,
                  /\\\\d/,
                  /\\\\d/,
                  "-",
                  /\\\\d/,
                  /\\\\d/,
                  "-",
                  /\\\\d/,
                  /\\\\d/,
                ]
              }
              name="phone"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder="+7 (978) 802-10-42"
              type="tel"
              value=""
            >
              <C
                name="phone"
                render={[Function]}
              >
                <FieldInner
                  formik={
                    Object {
                      "dirty": false,
                      "errors": Object {},
                      "handleBlur": [Function],
                      "handleChange": [Function],
                      "handleReset": [Function],
                      "handleSubmit": [Function],
                      "initialValues": Object {
                        "amount": "",
                        "phone": "",
                      },
                      "isSubmitting": true,
                      "isValid": false,
                      "isValidating": true,
                      "registerField": [Function],
                      "resetForm": [Function],
                      "setError": [Function],
                      "setErrors": [Function],
                      "setFieldError": [Function],
                      "setFieldTouched": [Function],
                      "setFieldValue": [Function],
                      "setFormikState": [Function],
                      "setStatus": [Function],
                      "setSubmitting": [Function],
                      "setTouched": [Function],
                      "setValues": [Function],
                      "submitCount": 1,
                      "submitForm": [Function],
                      "touched": Object {
                        "amount": true,
                        "phone": true,
                      },
                      "unregisterField": [Function],
                      "validate": [Function],
                      "validateField": [Function],
                      "validateForm": [Function],
                      "validateOnBlur": true,
                      "validateOnChange": true,
                      "validationSchema": undefined,
                      "values": Object {
                        "amount": "",
                        "phone": "",
                      },
                    }
                  }
                  name="phone"
                  render={[Function]}
                >
                  <styles__StyledContainer>
                    <div
                      className="styles__StyledContainer-sc-12xhm0c-0 gllhCp"
                    >
                      <styles__StyledLabel
                        htmlFor="phone"
                      >
                        <label
                          className="styles__StyledLabel-sc-12xhm0c-2 dnUmdd"
                          htmlFor="phone"
                        >
                          Phone number
                        </label>
                      </styles__StyledLabel>
                      <t
                        guide={false}
                        mask={
                          Array [
                            "+",
                            "7",
                            " ",
                            "(",
                            /\\[1-9\\]/,
                            /\\\\d/,
                            /\\\\d/,
                            ")",
                            " ",
                            /\\\\d/,
                            /\\\\d/,
                            /\\\\d/,
                            "-",
                            /\\\\d/,
                            /\\\\d/,
                            "-",
                            /\\\\d/,
                            /\\\\d/,
                          ]
                        }
                        name="phone"
                        onBlur={[Function]}
                        onChange={[Function]}
                        placeholder="+7 (978) 802-10-42"
                        render={[Function]}
                        type="tel"
                        value=""
                      >
                        <styles__StyledInput
                          defaultValue=""
                          innerRef={[Function]}
                          name="phone"
                          onBlur={[Function]}
                          onChange={[Function]}
                          placeholder="+7 (978) 802-10-42"
                          type="tel"
                        >
                          <input
                            className="styles__StyledInput-sc-12xhm0c-1 ksPcYq"
                            defaultValue=""
                            name="phone"
                            onBlur={[Function]}
                            onChange={[Function]}
                            placeholder="+7 (978) 802-10-42"
                            type="tel"
                          />
                        </styles__StyledInput>
                      </t>
                    </div>
                  </styles__StyledContainer>
                </FieldInner>
              </C>
            </Input>
            <Input
              innerRef={[Function]}
              label="Amount"
              mask={[Function]}
              name="amount"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            >
              <C
                name="amount"
                render={[Function]}
              >
                <FieldInner
                  formik={
                    Object {
                      "dirty": false,
                      "errors": Object {},
                      "handleBlur": [Function],
                      "handleChange": [Function],
                      "handleReset": [Function],
                      "handleSubmit": [Function],
                      "initialValues": Object {
                        "amount": "",
                        "phone": "",
                      },
                      "isSubmitting": true,
                      "isValid": false,
                      "isValidating": true,
                      "registerField": [Function],
                      "resetForm": [Function],
                      "setError": [Function],
                      "setErrors": [Function],
                      "setFieldError": [Function],
                      "setFieldTouched": [Function],
                      "setFieldValue": [Function],
                      "setFormikState": [Function],
                      "setStatus": [Function],
                      "setSubmitting": [Function],
                      "setTouched": [Function],
                      "setValues": [Function],
                      "submitCount": 1,
                      "submitForm": [Function],
                      "touched": Object {
                        "amount": true,
                        "phone": true,
                      },
                      "unregisterField": [Function],
                      "validate": [Function],
                      "validateField": [Function],
                      "validateForm": [Function],
                      "validateOnBlur": true,
                      "validateOnChange": true,
                      "validationSchema": undefined,
                      "values": Object {
                        "amount": "",
                        "phone": "",
                      },
                    }
                  }
                  name="amount"
                  render={[Function]}
                >
                  <styles__StyledContainer>
                    <div
                      className="styles__StyledContainer-sc-12xhm0c-0 gllhCp"
                    >
                      <styles__StyledLabel
                        htmlFor="amount"
                      >
                        <label
                          className="styles__StyledLabel-sc-12xhm0c-2 dnUmdd"
                          htmlFor="amount"
                        >
                          Amount
                        </label>
                      </styles__StyledLabel>
                      <t
                        mask={[Function]}
                        name="amount"
                        onBlur={[Function]}
                        onChange={[Function]}
                        render={[Function]}
                        value=""
                      >
                        <styles__StyledInput
                          defaultValue=""
                          innerRef={[Function]}
                          name="amount"
                          onBlur={[Function]}
                          onChange={[Function]}
                        >
                          <input
                            className="styles__StyledInput-sc-12xhm0c-1 ksPcYq"
                            defaultValue=""
                            name="amount"
                            onBlur={[Function]}
                            onChange={[Function]}
                          />
                        </styles__StyledInput>
                      </t>
                    </div>
                  </styles__StyledContainer>
                </FieldInner>
              </C>
            </Input>
            <styles__Button
              disabled={true}
              type="submit"
            >
              <button
                className="styles__Button-sc-1pz6ecu-2 bMKNpz"
                disabled={true}
                type="submit"
              >
                Submitting
              </button>
            </styles__Button>
          </form>
        </styles__Form>
      </div>
    </RefilBalanceForm>
  </Formik>
</WithFormik(RefilBalanceForm)>
`;

exports[`Formik correctly validate form submission 3`] = `
<WithFormik(RefilBalanceForm)
  provider={
    Object {
      "id": 1,
      "name": "MTS",
    }
  }
>
  <Formik
    enableReinitialize={false}
    handleSubmit={[Function]}
    initialValues={
      Object {
        "amount": "",
        "phone": "",
      }
    }
    isInitialValid={false}
    onSubmit={[Function]}
    provider={
      Object {
        "id": 1,
        "name": "MTS",
      }
    }
    render={[Function]}
    validate={[Function]}
    validateOnBlur={true}
    validateOnChange={true}
  >
    <RefilBalanceForm
      dirty={false}
      errors={
        Object {
          "amount": "Min: 1 ₽",
          "phone": "Phone number is required.",
        }
      }
      handleBlur={[Function]}
      handleChange={[Function]}
      handleReset={[Function]}
      handleSubmit={[Function]}
      initialValues={
        Object {
          "amount": "",
          "phone": "",
        }
      }
      isSubmitting={false}
      isValid={false}
      isValidating={false}
      provider={
        Object {
          "id": 1,
          "name": "MTS",
        }
      }
      registerField={[Function]}
      resetForm={[Function]}
      setError={[Function]}
      setErrors={[Function]}
      setFieldError={[Function]}
      setFieldTouched={[Function]}
      setFieldValue={[Function]}
      setFormikState={[Function]}
      setStatus={[Function]}
      setSubmitting={[Function]}
      setTouched={[Function]}
      setValues={[Function]}
      submitCount={1}
      submitForm={[Function]}
      touched={
        Object {
          "amount": true,
          "phone": true,
        }
      }
      unregisterField={[Function]}
      validateField={[Function]}
      validateForm={[Function]}
      validateOnBlur={true}
      validateOnChange={true}
      values={
        Object {
          "amount": "",
          "phone": "",
        }
      }
    >
      <div>
        <styles__Header>
          <h1
            className="styles__Header-sc-1pz6ecu-1 YZJuF"
          >
            Refil balance 
            MTS
          </h1>
        </styles__Header>
        <styles__Form
          onSubmit={[Function]}
        >
          <form
            className="styles__Form-sc-1pz6ecu-0 euvddx"
            onSubmit={[Function]}
          >
            <Input
              guide={false}
              innerRef={[Function]}
              label="Phone number"
              mask={
                Array [
                  "+",
                  "7",
                  " ",
                  "(",
                  /\\[1-9\\]/,
                  /\\\\d/,
                  /\\\\d/,
                  ")",
                  " ",
                  /\\\\d/,
                  /\\\\d/,
                  /\\\\d/,
                  "-",
                  /\\\\d/,
                  /\\\\d/,
                  "-",
                  /\\\\d/,
                  /\\\\d/,
                ]
              }
              name="phone"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder="+7 (978) 802-10-42"
              type="tel"
              value=""
            >
              <C
                name="phone"
                render={[Function]}
              >
                <FieldInner
                  formik={
                    Object {
                      "dirty": false,
                      "errors": Object {
                        "amount": "Min: 1 ₽",
                        "phone": "Phone number is required.",
                      },
                      "handleBlur": [Function],
                      "handleChange": [Function],
                      "handleReset": [Function],
                      "handleSubmit": [Function],
                      "initialValues": Object {
                        "amount": "",
                        "phone": "",
                      },
                      "isSubmitting": false,
                      "isValid": false,
                      "isValidating": false,
                      "registerField": [Function],
                      "resetForm": [Function],
                      "setError": [Function],
                      "setErrors": [Function],
                      "setFieldError": [Function],
                      "setFieldTouched": [Function],
                      "setFieldValue": [Function],
                      "setFormikState": [Function],
                      "setStatus": [Function],
                      "setSubmitting": [Function],
                      "setTouched": [Function],
                      "setValues": [Function],
                      "submitCount": 1,
                      "submitForm": [Function],
                      "touched": Object {
                        "amount": true,
                        "phone": true,
                      },
                      "unregisterField": [Function],
                      "validate": [Function],
                      "validateField": [Function],
                      "validateForm": [Function],
                      "validateOnBlur": true,
                      "validateOnChange": true,
                      "validationSchema": undefined,
                      "values": Object {
                        "amount": "",
                        "phone": "",
                      },
                    }
                  }
                  name="phone"
                  render={[Function]}
                >
                  <styles__StyledContainer>
                    <div
                      className="styles__StyledContainer-sc-12xhm0c-0 gllhCp"
                    >
                      <styles__StyledLabel
                        error="Phone number is required."
                        htmlFor="phone"
                      >
                        <label
                          className="styles__StyledLabel-sc-12xhm0c-2 butblQ"
                          htmlFor="phone"
                        >
                          Phone number
                        </label>
                      </styles__StyledLabel>
                      <t
                        error="Phone number is required."
                        guide={false}
                        mask={
                          Array [
                            "+",
                            "7",
                            " ",
                            "(",
                            /\\[1-9\\]/,
                            /\\\\d/,
                            /\\\\d/,
                            ")",
                            " ",
                            /\\\\d/,
                            /\\\\d/,
                            /\\\\d/,
                            "-",
                            /\\\\d/,
                            /\\\\d/,
                            "-",
                            /\\\\d/,
                            /\\\\d/,
                          ]
                        }
                        name="phone"
                        onBlur={[Function]}
                        onChange={[Function]}
                        placeholder="+7 (978) 802-10-42"
                        render={[Function]}
                        type="tel"
                        value=""
                      >
                        <styles__StyledInput
                          defaultValue=""
                          error="Phone number is required."
                          innerRef={[Function]}
                          name="phone"
                          onBlur={[Function]}
                          onChange={[Function]}
                          placeholder="+7 (978) 802-10-42"
                          type="tel"
                        >
                          <input
                            className="styles__StyledInput-sc-12xhm0c-1 biGWds"
                            defaultValue=""
                            name="phone"
                            onBlur={[Function]}
                            onChange={[Function]}
                            placeholder="+7 (978) 802-10-42"
                            type="tel"
                          />
                        </styles__StyledInput>
                      </t>
                      <styles__StyledMessage
                        size="small"
                        type="error"
                      >
                        <div
                          className="styles__StyledMessage-sc-17hgkf4-0 dbRolt"
                          size="small"
                          type="error"
                        >
                          Phone number is required.
                        </div>
                      </styles__StyledMessage>
                    </div>
                  </styles__StyledContainer>
                </FieldInner>
              </C>
            </Input>
            <Input
              innerRef={[Function]}
              label="Amount"
              mask={[Function]}
              name="amount"
              onBlur={[Function]}
              onChange={[Function]}
              value=""
            >
              <C
                name="amount"
                render={[Function]}
              >
                <FieldInner
                  formik={
                    Object {
                      "dirty": false,
                      "errors": Object {
                        "amount": "Min: 1 ₽",
                        "phone": "Phone number is required.",
                      },
                      "handleBlur": [Function],
                      "handleChange": [Function],
                      "handleReset": [Function],
                      "handleSubmit": [Function],
                      "initialValues": Object {
                        "amount": "",
                        "phone": "",
                      },
                      "isSubmitting": false,
                      "isValid": false,
                      "isValidating": false,
                      "registerField": [Function],
                      "resetForm": [Function],
                      "setError": [Function],
                      "setErrors": [Function],
                      "setFieldError": [Function],
                      "setFieldTouched": [Function],
                      "setFieldValue": [Function],
                      "setFormikState": [Function],
                      "setStatus": [Function],
                      "setSubmitting": [Function],
                      "setTouched": [Function],
                      "setValues": [Function],
                      "submitCount": 1,
                      "submitForm": [Function],
                      "touched": Object {
                        "amount": true,
                        "phone": true,
                      },
                      "unregisterField": [Function],
                      "validate": [Function],
                      "validateField": [Function],
                      "validateForm": [Function],
                      "validateOnBlur": true,
                      "validateOnChange": true,
                      "validationSchema": undefined,
                      "values": Object {
                        "amount": "",
                        "phone": "",
                      },
                    }
                  }
                  name="amount"
                  render={[Function]}
                >
                  <styles__StyledContainer>
                    <div
                      className="styles__StyledContainer-sc-12xhm0c-0 gllhCp"
                    >
                      <styles__StyledLabel
                        error="Min: 1 ₽"
                        htmlFor="amount"
                      >
                        <label
                          className="styles__StyledLabel-sc-12xhm0c-2 butblQ"
                          htmlFor="amount"
                        >
                          Amount
                        </label>
                      </styles__StyledLabel>
                      <t
                        error="Min: 1 ₽"
                        mask={[Function]}
                        name="amount"
                        onBlur={[Function]}
                        onChange={[Function]}
                        render={[Function]}
                        value=""
                      >
                        <styles__StyledInput
                          defaultValue=""
                          error="Min: 1 ₽"
                          innerRef={[Function]}
                          name="amount"
                          onBlur={[Function]}
                          onChange={[Function]}
                        >
                          <input
                            className="styles__StyledInput-sc-12xhm0c-1 biGWds"
                            defaultValue=""
                            name="amount"
                            onBlur={[Function]}
                            onChange={[Function]}
                          />
                        </styles__StyledInput>
                      </t>
                      <styles__StyledMessage
                        size="small"
                        type="error"
                      >
                        <div
                          className="styles__StyledMessage-sc-17hgkf4-0 dbRolt"
                          size="small"
                          type="error"
                        >
                          Min: 1 ₽
                        </div>
                      </styles__StyledMessage>
                    </div>
                  </styles__StyledContainer>
                </FieldInner>
              </C>
            </Input>
            <styles__Button
              disabled={false}
              type="submit"
            >
              <button
                className="styles__Button-sc-1pz6ecu-2 bMKNpz"
                disabled={false}
                type="submit"
              >
                Submit
              </button>
            </styles__Button>
          </form>
        </styles__Form>
      </div>
    </RefilBalanceForm>
  </Formik>
</WithFormik(RefilBalanceForm)>
`;

exports[`Formik correctly validate form submission 4`] = `
<WithFormik(RefilBalanceForm)
  provider={
    Object {
      "id": 1,
      "name": "MTS",
    }
  }
>
  <Formik
    enableReinitialize={false}
    handleSubmit={[Function]}
    initialValues={
      Object {
        "amount": "",
        "phone": "",
      }
    }
    isInitialValid={false}
    onSubmit={[Function]}
    provider={
      Object {
        "id": 1,
        "name": "MTS",
      }
    }
    render={[Function]}
    validate={[Function]}
    validateOnBlur={true}
    validateOnChange={true}
  >
    <RefilBalanceForm
      dirty={true}
      errors={
        Object {
          "amount": "Max: 1000 ₽",
          "phone": "Phone number should contain 11 digits",
        }
      }
      handleBlur={[Function]}
      handleChange={[Function]}
      handleReset={[Function]}
      handleSubmit={[Function]}
      initialValues={
        Object {
          "amount": "",
          "phone": "",
        }
      }
      isSubmitting={false}
      isValid={false}
      isValidating={false}
      provider={
        Object {
          "id": 1,
          "name": "MTS",
        }
      }
      registerField={[Function]}
      resetForm={[Function]}
      setError={[Function]}
      setErrors={[Function]}
      setFieldError={[Function]}
      setFieldTouched={[Function]}
      setFieldValue={[Function]}
      setFormikState={[Function]}
      setStatus={[Function]}
      setSubmitting={[Function]}
      setTouched={[Function]}
      setValues={[Function]}
      submitCount={2}
      submitForm={[Function]}
      touched={
        Object {
          "amount": true,
          "phone": true,
        }
      }
      unregisterField={[Function]}
      validateField={[Function]}
      validateForm={[Function]}
      validateOnBlur={true}
      validateOnChange={true}
      values={
        Object {
          "amount": "2000",
          "phone": "+7 (999) 99",
        }
      }
    >
      <div>
        <styles__Header>
          <h1
            className="styles__Header-sc-1pz6ecu-1 YZJuF"
          >
            Refil balance 
            MTS
          </h1>
        </styles__Header>
        <styles__Form
          onSubmit={[Function]}
        >
          <form
            className="styles__Form-sc-1pz6ecu-0 euvddx"
            onSubmit={[Function]}
          >
            <Input
              guide={false}
              innerRef={[Function]}
              label="Phone number"
              mask={
                Array [
                  "+",
                  "7",
                  " ",
                  "(",
                  /\\[1-9\\]/,
                  /\\\\d/,
                  /\\\\d/,
                  ")",
                  " ",
                  /\\\\d/,
                  /\\\\d/,
                  /\\\\d/,
                  "-",
                  /\\\\d/,
                  /\\\\d/,
                  "-",
                  /\\\\d/,
                  /\\\\d/,
                ]
              }
              name="phone"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder="+7 (978) 802-10-42"
              type="tel"
              value="+7 (999) 99"
            >
              <C
                name="phone"
                render={[Function]}
              >
                <FieldInner
                  formik={
                    Object {
                      "dirty": true,
                      "errors": Object {
                        "amount": "Max: 1000 ₽",
                        "phone": "Phone number should contain 11 digits",
                      },
                      "handleBlur": [Function],
                      "handleChange": [Function],
                      "handleReset": [Function],
                      "handleSubmit": [Function],
                      "initialValues": Object {
                        "amount": "",
                        "phone": "",
                      },
                      "isSubmitting": false,
                      "isValid": false,
                      "isValidating": false,
                      "registerField": [Function],
                      "resetForm": [Function],
                      "setError": [Function],
                      "setErrors": [Function],
                      "setFieldError": [Function],
                      "setFieldTouched": [Function],
                      "setFieldValue": [Function],
                      "setFormikState": [Function],
                      "setStatus": [Function],
                      "setSubmitting": [Function],
                      "setTouched": [Function],
                      "setValues": [Function],
                      "submitCount": 2,
                      "submitForm": [Function],
                      "touched": Object {
                        "amount": true,
                        "phone": true,
                      },
                      "unregisterField": [Function],
                      "validate": [Function],
                      "validateField": [Function],
                      "validateForm": [Function],
                      "validateOnBlur": true,
                      "validateOnChange": true,
                      "validationSchema": undefined,
                      "values": Object {
                        "amount": "2000",
                        "phone": "+7 (999) 99",
                      },
                    }
                  }
                  name="phone"
                  render={[Function]}
                >
                  <styles__StyledContainer>
                    <div
                      className="styles__StyledContainer-sc-12xhm0c-0 gllhCp"
                    >
                      <styles__StyledLabel
                        error="Phone number should contain 11 digits"
                        htmlFor="phone"
                      >
                        <label
                          className="styles__StyledLabel-sc-12xhm0c-2 butblQ"
                          htmlFor="phone"
                        >
                          Phone number
                        </label>
                      </styles__StyledLabel>
                      <t
                        error="Phone number should contain 11 digits"
                        guide={false}
                        mask={
                          Array [
                            "+",
                            "7",
                            " ",
                            "(",
                            /\\[1-9\\]/,
                            /\\\\d/,
                            /\\\\d/,
                            ")",
                            " ",
                            /\\\\d/,
                            /\\\\d/,
                            /\\\\d/,
                            "-",
                            /\\\\d/,
                            /\\\\d/,
                            "-",
                            /\\\\d/,
                            /\\\\d/,
                          ]
                        }
                        name="phone"
                        onBlur={[Function]}
                        onChange={[Function]}
                        placeholder="+7 (978) 802-10-42"
                        render={[Function]}
                        type="tel"
                        value="+7 (999) 99"
                      >
                        <styles__StyledInput
                          defaultValue="+7 (999) 99"
                          error="Phone number should contain 11 digits"
                          innerRef={[Function]}
                          name="phone"
                          onBlur={[Function]}
                          onChange={[Function]}
                          placeholder="+7 (978) 802-10-42"
                          type="tel"
                        >
                          <input
                            className="styles__StyledInput-sc-12xhm0c-1 biGWds"
                            defaultValue="+7 (999) 99"
                            name="phone"
                            onBlur={[Function]}
                            onChange={[Function]}
                            placeholder="+7 (978) 802-10-42"
                            type="tel"
                          />
                        </styles__StyledInput>
                      </t>
                      <styles__StyledMessage
                        size="small"
                        type="error"
                      >
                        <div
                          className="styles__StyledMessage-sc-17hgkf4-0 dbRolt"
                          size="small"
                          type="error"
                        >
                          Phone number should contain 11 digits
                        </div>
                      </styles__StyledMessage>
                    </div>
                  </styles__StyledContainer>
                </FieldInner>
              </C>
            </Input>
            <Input
              innerRef={[Function]}
              label="Amount"
              mask={[Function]}
              name="amount"
              onBlur={[Function]}
              onChange={[Function]}
              value="2000"
            >
              <C
                name="amount"
                render={[Function]}
              >
                <FieldInner
                  formik={
                    Object {
                      "dirty": true,
                      "errors": Object {
                        "amount": "Max: 1000 ₽",
                        "phone": "Phone number should contain 11 digits",
                      },
                      "handleBlur": [Function],
                      "handleChange": [Function],
                      "handleReset": [Function],
                      "handleSubmit": [Function],
                      "initialValues": Object {
                        "amount": "",
                        "phone": "",
                      },
                      "isSubmitting": false,
                      "isValid": false,
                      "isValidating": false,
                      "registerField": [Function],
                      "resetForm": [Function],
                      "setError": [Function],
                      "setErrors": [Function],
                      "setFieldError": [Function],
                      "setFieldTouched": [Function],
                      "setFieldValue": [Function],
                      "setFormikState": [Function],
                      "setStatus": [Function],
                      "setSubmitting": [Function],
                      "setTouched": [Function],
                      "setValues": [Function],
                      "submitCount": 2,
                      "submitForm": [Function],
                      "touched": Object {
                        "amount": true,
                        "phone": true,
                      },
                      "unregisterField": [Function],
                      "validate": [Function],
                      "validateField": [Function],
                      "validateForm": [Function],
                      "validateOnBlur": true,
                      "validateOnChange": true,
                      "validationSchema": undefined,
                      "values": Object {
                        "amount": "2000",
                        "phone": "+7 (999) 99",
                      },
                    }
                  }
                  name="amount"
                  render={[Function]}
                >
                  <styles__StyledContainer>
                    <div
                      className="styles__StyledContainer-sc-12xhm0c-0 gllhCp"
                    >
                      <styles__StyledLabel
                        error="Max: 1000 ₽"
                        htmlFor="amount"
                      >
                        <label
                          className="styles__StyledLabel-sc-12xhm0c-2 butblQ"
                          htmlFor="amount"
                        >
                          Amount
                        </label>
                      </styles__StyledLabel>
                      <t
                        error="Max: 1000 ₽"
                        mask={[Function]}
                        name="amount"
                        onBlur={[Function]}
                        onChange={[Function]}
                        render={[Function]}
                        value="2000"
                      >
                        <styles__StyledInput
                          defaultValue="2000"
                          error="Max: 1000 ₽"
                          innerRef={[Function]}
                          name="amount"
                          onBlur={[Function]}
                          onChange={[Function]}
                        >
                          <input
                            className="styles__StyledInput-sc-12xhm0c-1 biGWds"
                            defaultValue="2000"
                            name="amount"
                            onBlur={[Function]}
                            onChange={[Function]}
                          />
                        </styles__StyledInput>
                      </t>
                      <styles__StyledMessage
                        size="small"
                        type="error"
                      >
                        <div
                          className="styles__StyledMessage-sc-17hgkf4-0 dbRolt"
                          size="small"
                          type="error"
                        >
                          Max: 1000 ₽
                        </div>
                      </styles__StyledMessage>
                    </div>
                  </styles__StyledContainer>
                </FieldInner>
              </C>
            </Input>
            <styles__Button
              disabled={false}
              type="submit"
            >
              <button
                className="styles__Button-sc-1pz6ecu-2 bMKNpz"
                disabled={false}
                type="submit"
              >
                Submit
              </button>
            </styles__Button>
          </form>
        </styles__Form>
      </div>
    </RefilBalanceForm>
  </Formik>
</WithFormik(RefilBalanceForm)>
`;

exports[`Formik correctly validate form submission 5`] = `
<WithFormik(RefilBalanceForm)
  provider={
    Object {
      "id": 1,
      "name": "MTS",
    }
  }
>
  <Formik
    enableReinitialize={false}
    handleSubmit={[Function]}
    initialValues={
      Object {
        "amount": "",
        "phone": "",
      }
    }
    isInitialValid={false}
    onSubmit={[Function]}
    provider={
      Object {
        "id": 1,
        "name": "MTS",
      }
    }
    render={[Function]}
    validate={[Function]}
    validateOnBlur={true}
    validateOnChange={true}
  >
    <RefilBalanceForm
      dirty={true}
      errors={Object {}}
      handleBlur={[Function]}
      handleChange={[Function]}
      handleReset={[Function]}
      handleSubmit={[Function]}
      initialValues={
        Object {
          "amount": "",
          "phone": "",
        }
      }
      isSubmitting={true}
      isValid={true}
      isValidating={false}
      provider={
        Object {
          "id": 1,
          "name": "MTS",
        }
      }
      registerField={[Function]}
      resetForm={[Function]}
      setError={[Function]}
      setErrors={[Function]}
      setFieldError={[Function]}
      setFieldTouched={[Function]}
      setFieldValue={[Function]}
      setFormikState={[Function]}
      setStatus={[Function]}
      setSubmitting={[Function]}
      setTouched={[Function]}
      setValues={[Function]}
      submitCount={3}
      submitForm={[Function]}
      touched={
        Object {
          "amount": true,
          "phone": true,
        }
      }
      unregisterField={[Function]}
      validateField={[Function]}
      validateForm={[Function]}
      validateOnBlur={true}
      validateOnChange={true}
      values={
        Object {
          "amount": "999",
          "phone": "+7 (999) 999-99-99",
        }
      }
    >
      <div>
        <styles__Header>
          <h1
            className="styles__Header-sc-1pz6ecu-1 YZJuF"
          >
            Refil balance 
            MTS
          </h1>
        </styles__Header>
        <styles__Form
          onSubmit={[Function]}
        >
          <form
            className="styles__Form-sc-1pz6ecu-0 euvddx"
            onSubmit={[Function]}
          >
            <Input
              guide={false}
              innerRef={[Function]}
              label="Phone number"
              mask={
                Array [
                  "+",
                  "7",
                  " ",
                  "(",
                  /\\[1-9\\]/,
                  /\\\\d/,
                  /\\\\d/,
                  ")",
                  " ",
                  /\\\\d/,
                  /\\\\d/,
                  /\\\\d/,
                  "-",
                  /\\\\d/,
                  /\\\\d/,
                  "-",
                  /\\\\d/,
                  /\\\\d/,
                ]
              }
              name="phone"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder="+7 (978) 802-10-42"
              type="tel"
              value="+7 (999) 999-99-99"
            >
              <C
                name="phone"
                render={[Function]}
              >
                <FieldInner
                  formik={
                    Object {
                      "dirty": true,
                      "errors": Object {},
                      "handleBlur": [Function],
                      "handleChange": [Function],
                      "handleReset": [Function],
                      "handleSubmit": [Function],
                      "initialValues": Object {
                        "amount": "",
                        "phone": "",
                      },
                      "isSubmitting": true,
                      "isValid": true,
                      "isValidating": false,
                      "registerField": [Function],
                      "resetForm": [Function],
                      "setError": [Function],
                      "setErrors": [Function],
                      "setFieldError": [Function],
                      "setFieldTouched": [Function],
                      "setFieldValue": [Function],
                      "setFormikState": [Function],
                      "setStatus": [Function],
                      "setSubmitting": [Function],
                      "setTouched": [Function],
                      "setValues": [Function],
                      "submitCount": 3,
                      "submitForm": [Function],
                      "touched": Object {
                        "amount": true,
                        "phone": true,
                      },
                      "unregisterField": [Function],
                      "validate": [Function],
                      "validateField": [Function],
                      "validateForm": [Function],
                      "validateOnBlur": true,
                      "validateOnChange": true,
                      "validationSchema": undefined,
                      "values": Object {
                        "amount": "999",
                        "phone": "+7 (999) 999-99-99",
                      },
                    }
                  }
                  name="phone"
                  render={[Function]}
                >
                  <styles__StyledContainer>
                    <div
                      className="styles__StyledContainer-sc-12xhm0c-0 gllhCp"
                    >
                      <styles__StyledLabel
                        htmlFor="phone"
                      >
                        <label
                          className="styles__StyledLabel-sc-12xhm0c-2 dnUmdd"
                          htmlFor="phone"
                        >
                          Phone number
                        </label>
                      </styles__StyledLabel>
                      <t
                        guide={false}
                        mask={
                          Array [
                            "+",
                            "7",
                            " ",
                            "(",
                            /\\[1-9\\]/,
                            /\\\\d/,
                            /\\\\d/,
                            ")",
                            " ",
                            /\\\\d/,
                            /\\\\d/,
                            /\\\\d/,
                            "-",
                            /\\\\d/,
                            /\\\\d/,
                            "-",
                            /\\\\d/,
                            /\\\\d/,
                          ]
                        }
                        name="phone"
                        onBlur={[Function]}
                        onChange={[Function]}
                        placeholder="+7 (978) 802-10-42"
                        render={[Function]}
                        type="tel"
                        value="+7 (999) 999-99-99"
                      >
                        <styles__StyledInput
                          defaultValue="+7 (999) 999-99-99"
                          innerRef={[Function]}
                          name="phone"
                          onBlur={[Function]}
                          onChange={[Function]}
                          placeholder="+7 (978) 802-10-42"
                          type="tel"
                        >
                          <input
                            className="styles__StyledInput-sc-12xhm0c-1 ksPcYq"
                            defaultValue="+7 (999) 999-99-99"
                            name="phone"
                            onBlur={[Function]}
                            onChange={[Function]}
                            placeholder="+7 (978) 802-10-42"
                            type="tel"
                          />
                        </styles__StyledInput>
                      </t>
                    </div>
                  </styles__StyledContainer>
                </FieldInner>
              </C>
            </Input>
            <Input
              innerRef={[Function]}
              label="Amount"
              mask={[Function]}
              name="amount"
              onBlur={[Function]}
              onChange={[Function]}
              value="999"
            >
              <C
                name="amount"
                render={[Function]}
              >
                <FieldInner
                  formik={
                    Object {
                      "dirty": true,
                      "errors": Object {},
                      "handleBlur": [Function],
                      "handleChange": [Function],
                      "handleReset": [Function],
                      "handleSubmit": [Function],
                      "initialValues": Object {
                        "amount": "",
                        "phone": "",
                      },
                      "isSubmitting": true,
                      "isValid": true,
                      "isValidating": false,
                      "registerField": [Function],
                      "resetForm": [Function],
                      "setError": [Function],
                      "setErrors": [Function],
                      "setFieldError": [Function],
                      "setFieldTouched": [Function],
                      "setFieldValue": [Function],
                      "setFormikState": [Function],
                      "setStatus": [Function],
                      "setSubmitting": [Function],
                      "setTouched": [Function],
                      "setValues": [Function],
                      "submitCount": 3,
                      "submitForm": [Function],
                      "touched": Object {
                        "amount": true,
                        "phone": true,
                      },
                      "unregisterField": [Function],
                      "validate": [Function],
                      "validateField": [Function],
                      "validateForm": [Function],
                      "validateOnBlur": true,
                      "validateOnChange": true,
                      "validationSchema": undefined,
                      "values": Object {
                        "amount": "999",
                        "phone": "+7 (999) 999-99-99",
                      },
                    }
                  }
                  name="amount"
                  render={[Function]}
                >
                  <styles__StyledContainer>
                    <div
                      className="styles__StyledContainer-sc-12xhm0c-0 gllhCp"
                    >
                      <styles__StyledLabel
                        htmlFor="amount"
                      >
                        <label
                          className="styles__StyledLabel-sc-12xhm0c-2 dnUmdd"
                          htmlFor="amount"
                        >
                          Amount
                        </label>
                      </styles__StyledLabel>
                      <t
                        mask={[Function]}
                        name="amount"
                        onBlur={[Function]}
                        onChange={[Function]}
                        render={[Function]}
                        value="999"
                      >
                        <styles__StyledInput
                          defaultValue="999"
                          innerRef={[Function]}
                          name="amount"
                          onBlur={[Function]}
                          onChange={[Function]}
                        >
                          <input
                            className="styles__StyledInput-sc-12xhm0c-1 ksPcYq"
                            defaultValue="999"
                            name="amount"
                            onBlur={[Function]}
                            onChange={[Function]}
                          />
                        </styles__StyledInput>
                      </t>
                    </div>
                  </styles__StyledContainer>
                </FieldInner>
              </C>
            </Input>
            <styles__Button
              disabled={true}
              type="submit"
            >
              <button
                className="styles__Button-sc-1pz6ecu-2 bMKNpz"
                disabled={true}
                type="submit"
              >
                Submitting
              </button>
            </styles__Button>
          </form>
        </styles__Form>
      </div>
    </RefilBalanceForm>
  </Formik>
</WithFormik(RefilBalanceForm)>
`;

exports[`RefilBalanceForm render correctly 1`] = `
<div>
  <styles__Header>
    Refil balance 
    MTS
  </styles__Header>
  <styles__Form>
    <Input
      guide={false}
      innerRef={[Function]}
      label="Phone number"
      mask={
        Array [
          "+",
          "7",
          " ",
          "(",
          /\\[1-9\\]/,
          /\\\\d/,
          /\\\\d/,
          ")",
          " ",
          /\\\\d/,
          /\\\\d/,
          /\\\\d/,
          "-",
          /\\\\d/,
          /\\\\d/,
          "-",
          /\\\\d/,
          /\\\\d/,
        ]
      }
      name="phone"
      placeholder="+7 (978) 802-10-42"
      type="tel"
      value="+7 999 99 99"
    />
    <Input
      innerRef={[Function]}
      label="Amount"
      mask={[Function]}
      name="amount"
      value="999"
    />
    <styles__Button
      type="submit"
    >
      Submit
    </styles__Button>
  </styles__Form>
</div>
`;

exports[`RefilBalanceForm renders message about succeeded submission 1`] = `
<div>
  <styles__Header>
    Refil balance 
    MTS
  </styles__Header>
  <styles__Form>
    <Input
      guide={false}
      innerRef={[Function]}
      label="Phone number"
      mask={
        Array [
          "+",
          "7",
          " ",
          "(",
          /\\[1-9\\]/,
          /\\\\d/,
          /\\\\d/,
          ")",
          " ",
          /\\\\d/,
          /\\\\d/,
          /\\\\d/,
          "-",
          /\\\\d/,
          /\\\\d/,
          "-",
          /\\\\d/,
          /\\\\d/,
        ]
      }
      name="phone"
      placeholder="+7 (978) 802-10-42"
      type="tel"
      value="+7 999 99 99"
    />
    <Input
      innerRef={[Function]}
      label="Amount"
      mask={[Function]}
      name="amount"
      value="999"
    />
    <styles__StyledMessage
      size="large"
      type="success"
    >
      Success! You will be redirected to the home page soon.
    </styles__StyledMessage>
    <styles__Button
      type="submit"
    >
      Submit
    </styles__Button>
  </styles__Form>
</div>
`;

exports[`RefilBalanceForm renders server error 1`] = `
<div>
  <styles__Header>
    Refil balance 
    MTS
  </styles__Header>
  <styles__Form>
    <Input
      guide={false}
      innerRef={[Function]}
      label="Phone number"
      mask={
        Array [
          "+",
          "7",
          " ",
          "(",
          /\\[1-9\\]/,
          /\\\\d/,
          /\\\\d/,
          ")",
          " ",
          /\\\\d/,
          /\\\\d/,
          /\\\\d/,
          "-",
          /\\\\d/,
          /\\\\d/,
          "-",
          /\\\\d/,
          /\\\\d/,
        ]
      }
      name="phone"
      placeholder="+7 (978) 802-10-42"
      type="tel"
      value="+7 999 99 99"
    />
    <Input
      innerRef={[Function]}
      label="Amount"
      mask={[Function]}
      name="amount"
      value="999"
    />
    <styles__StyledMessage
      size="large"
      type="error"
    >
      Sorry! Service is temporary unavailable.
    </styles__StyledMessage>
    <styles__Button
      type="submit"
    >
      Submit
    </styles__Button>
  </styles__Form>
</div>
`;
